--- a/ScreenTranslator/ScreenTranslator.csproj
+++ b/ScreenTranslator/ScreenTranslator.csproj
@@ -8,4 +8,8 @@
 	<PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
