--- a/ScreenTranslator/ScreenTranslator.csproj
+++ b/ScreenTranslator/ScreenTranslator.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+	<UseWindowsForms>true</UseWindowsForms>
 	<PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
